fix bug on mobile

--- a/css/table-kbofantasy.css
+++ b/css/table-kbofantasy.css
@@ -1,53 +1,15 @@
-.table-match > thead:first-child > tr:first-child > th:first-child {
+.table-roster {
+    white-space: nowrap;
+}
+
+.table-roster > thead:first-child > tr:first-child > th:first-child {
     position: sticky;
     left: 0em;
-    white-space: nowrap;
     background-color: white;
-}
-
-.table-match > tbody > tr > th:first-child {
-    position: sticky;
-    left: 0em;
-    white-space: nowrap;
-    background-color: white;
-}
-
-.table-roster-head > thead:first-child > tr:first-child > th:nth-child(2) {
-    white-space: nowrap;
-}
-
-.table-roster-head > tbody > tr > td:nth-child(2) {
-    white-space: nowrap;
-}
-
-.table-roster-main > thead:first-child {
-    white-space: nowrap;
 }
 
 .table-roster > tbody > tr > th:first-child {
     position: sticky;
     left: 0em;
     background-color: white;
-}
-
-.table-roster > thead:first-child > tr:first-child > th:nth-child(2) {
-    white-space: nowrap;
-}
-
-.table-roster > tbody > tr > td:nth-child(2) {
-    white-space: nowrap;
-}
-
-.table-trade > thead:first-child > tr:first-child > th:first-child {
-    position: sticky;
-    left: 0em;
-    background-color: white;
-    white-space: nowrap;
-}
-
-.table-trade > tbody > tr > th:first-child {
-    position: sticky;
-    left: 0em;
-    background-color: white;
-    white-space: nowrap;
 }
